Uprising range picker, since the latest range picker fixed the modal alignment issue internally.

--- a/css/px-chart.css
+++ b/css/px-chart.css
@@ -862,9 +862,6 @@ figure .fa {
 .data-event-icon:hover {
   cursor: pointer; }
 
-px-rangepicker {
-  text-align: left; }
-
 .px-chart-tooltip {
   min-width: 400px;
   text-align: right; }
