--- a/sass/px-chart-sketch.scss
+++ b/sass/px-chart-sketch.scss
@@ -62,10 +62,6 @@ figure .fa {
   cursor: pointer;
 }
 
-px-rangepicker {
-  text-align: left;
-}
-
 .px-chart-tooltip {
   min-width: 400px;
   text-align: right;
